Word break is on by default on all pages preventing overflow

--- a/app/assets/stylesheets/components/ccs-global/_ccs-global.scss
+++ b/app/assets/stylesheets/components/ccs-global/_ccs-global.scss
@@ -970,3 +970,7 @@ table.ccs-at-govuk-table--5050 {
     }
 }
 /* password strength ends */
+
+#main-content {
+  word-break: break-word;
+}
